syntax = "proto2";

package cn.hua.netty.protobuf_example.test2;

option optimize_for = SPEED;
option java_package = "cn.hua.netty.protobuf_example.test2";
option java_outer_classname = "MyMessage";

message Message {
    enum Type {
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }
    required Type type = 1;
    oneof data_body {
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional string address = 2;
}